Make fxui make jacoco, Others do not work